Archive2/f7/7e4f58062a3ece/output
main.cpp: In function 'void fun2()':
main.cpp:14:12: error: 'finshed' was not declared in this scope
     while(!finshed){
            ^
